// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapOption renders 0 1`] = `
Array [
  .c0 {
  wrap-option: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders function 1`] = `
Array [
  .c0 {
  wrap-option: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-option: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders negative number 1`] = `
Array [
  .c0 {
  wrap-option: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  wrap-option: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-option: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-option: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-option: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-option: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  wrap-option: July;
}

@media May {
  .c0 {
    wrap-option: August;
  }
}

@media April {
  .c0 {
    wrap-option: September;
  }
}

@media January {
  .c0 {
    wrap-option: November;
  }
}

@media April {
  .c0 {
    wrap-option: August;
  }
}

@media June {
  .c0 {
    wrap-option: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: July;
}

@media May {
  .c0 {
    wrap-option: August;
  }
}

@media April {
  .c0 {
    wrap-option: September;
  }
}

@media January {
  .c0 {
    wrap-option: November;
  }
}

@media April {
  .c0 {
    wrap-option: August;
  }
}

@media June {
  .c0 {
    wrap-option: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-option: November;
  }
}

@media April {
  .c0 {
    wrap-option: January;
  }
}

@media January {
  .c0 {
    wrap-option: December;
  }
}

@media April {
  .c0 {
    wrap-option: April;
  }
}

@media June {
  .c0 {
    wrap-option: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-option: November;
  }
}

@media April {
  .c0 {
    wrap-option: January;
  }
}

@media January {
  .c0 {
    wrap-option: December;
  }
}

@media April {
  .c0 {
    wrap-option: April;
  }
}

@media June {
  .c0 {
    wrap-option: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    wrap-option: July;
  }
}

@media April {
  .c0 {
    wrap-option: August;
  }
}

@media January {
  .c0 {
    wrap-option: September;
  }
}

@media April {
  .c0 {
    wrap-option: November;
  }
}

@media June {
  .c0 {
    wrap-option: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-option: July;
  }
}

@media April {
  .c0 {
    wrap-option: August;
  }
}

@media January {
  .c0 {
    wrap-option: September;
  }
}

@media April {
  .c0 {
    wrap-option: November;
  }
}

@media June {
  .c0 {
    wrap-option: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-option: January;
  }
}

@media April {
  .c0 {
    wrap-option: December;
  }
}

@media January {
  .c0 {
    wrap-option: April;
  }
}

@media April {
  .c0 {
    wrap-option: May;
  }
}

@media June {
  .c0 {
    wrap-option: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-option: January;
  }
}

@media April {
  .c0 {
    wrap-option: December;
  }
}

@media January {
  .c0 {
    wrap-option: April;
  }
}

@media April {
  .c0 {
    wrap-option: May;
  }
}

@media June {
  .c0 {
    wrap-option: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders postitive number 1`] = `
Array [
  .c0 {
  wrap-option: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders string 1`] = `
Array [
  .c0 {
  wrap-option: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapOption renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wrapOption renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-option: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-option: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
